# PrintoutCPP

./: CMakeLists.txt  Printout.pro  Printout.pro.user.aeeb22e  Printout_ru_RU.qm  Printout_ru_RU.ts  excelmanager.cpp  excelmanager.h  main.cpp  printQt.h  printoutmainwin.cpp  printoutmainwin.h  printoutmainwin.ui  printouttabledialog.cpp  printouttabledialog.h  printouttabledialog.ui
api/: Definitions.h  Printer.h  Printout.h  Record.h  TableStructure.h
api/db/: Dao.cpp  Dao.h
api/excelManager/: excelManager.h
